--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,66 @@
-html, body {
-  width: 100%;
-  height: 100%; }
+body {
+  background-color: #0ea1c9;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700; }
 
-div {
-  color: #0d3349; }
+.box {
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 300px;
+  transform-style: preserve-3d;
+  perspective: 2000px; }
+  .box:hover {
+    transform: translate(-50%, -50%) rotateY(-20deg) skewY(3deg);
+    transition: .4s; }
+
+.box::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border-top: 20px solid #ffffff;
+  border-left: 20px solid #ffffff;
+  box-sizing: border-box; }
+
+.box::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border-bottom: 20px solid #ffffff;
+  border-right: 20px solid #ffffff;
+  box-sizing: border-box; }
+
+.text {
+  background-color: #2c3a47;
+  position: absolute;
+  top: 30px;
+  left: -30px;
+  width: calc(100% + 60px);
+  height: calc(100% - 60px); }
+  .text__block {
+    line-height: 1.5;
+    padding: 21px 60px;
+    width: 100%;
+    box-sizing: border-box; }
+  .text:hover {
+    transform: rotateY(20deg) skewY(-3deg);
+    transition: .4s; }
+
+h3 {
+  font-size: 30px;
+  margin-top: 0;
+  margin-bottom: 5px; }
+
+p {
+  font-size: 15px; }
