--- a/scss/style.css
+++ b/scss/style.css
@@ -2,108 +2,131 @@
   margin: 0;
   padding: 0;
   border: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 li {
   text-decoration: none;
-  list-style: none; }
+  list-style: none;
+}
 
 body {
   height: 100%;
-  font-family: 'Montserrat', 'Arial',sans-serif;
-  font-weight: bold; }
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-weight: bold;
+}
 
 .container {
   max-width: 1180px;
   margin: 0 auto;
-  padding: 0 10px; }
+  padding: 0 10px;
+}
 
 .header {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 50; }
+  z-index: 50;
+}
 
 .header::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #4a0263;
-  z-index: 2; }
+  z-index: 2;
+}
 
 .header__body {
   position: relative;
   display: flex;
   justify-content: space-between;
   height: 80px;
-  align-items: center; }
+  align-items: center;
+}
 
 .header__logo {
   flex: 0 0 60px;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
-  z-index: 3; }
+  z-index: 3;
+}
 
 .header__logo img {
   max-width: 100%;
-  display: block; }
+  display: block;
+}
 
 .header__burger {
-  display: none; }
+  display: none;
+}
 
 .header__list {
   display: flex;
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+}
 
 .header__item {
-  margin: 0 0 0 20px; }
+  margin: 0 0 0 20px;
+}
 
 .header__link {
   color: #fff;
   text-transform: uppercase;
   font-size: 14px;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .content {
-  padding: 100px 0 0 0; }
+  padding: 100px 0 0 0;
+}
 
 .content__text {
   font-size: 18px;
-  line-height: 25px; }
-  .content__text p {
-    margin: 0 0 20px 0; }
+  line-height: 25px;
+}
+.content__text p {
+  margin: 0 0 20px 0;
+}
 
 @media (max-width: 767px) {
   body.lock {
-    overflow: hidden; }
+    overflow: hidden;
+  }
+
   .header__body {
-    height: 50px; }
+    height: 50px;
+  }
   .header__logo {
-    flex: 0 0 40px; }
+    flex: 0 0 40px;
+  }
   .header__burger {
     display: block;
     position: relative;
     width: 30px;
     height: 20px;
     position: relative;
-    z-index: 3; }
-    .header__burger span {
-      position: absolute;
-      background-color: #fff;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      top: 9px;
-      transition: all 0.3s ease 0s; }
+    z-index: 3;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    transition: all 0.3s ease 0s;
+  }
   .header__menu {
     position: fixed;
     top: -100%;
@@ -113,34 +136,50 @@ body {
     overflow: auto;
     background-color: #fe5e9a;
     padding: 70px 10px 0 10px;
-    transition: all 0.3s ease 0s; }
+    transition: all 0.3s ease 0s;
+  }
   .header__list {
-    display: block; }
+    display: block;
+  }
   .header__item {
-    margin: 0 0 20px 0; }
+    margin: 0 0 20px 0;
+  }
   .header__burger::before, .header__burger::after {
-    content: '';
+    content: "";
     position: absolute;
     background-color: #ffffff;
     width: 100%;
     height: 2px;
     left: 0;
-    transition: all 0.3s ease 0s; }
+    transition: all 0.3s ease 0s;
+  }
   .header__burger::before {
-    top: 0; }
+    top: 0;
+  }
   .header__burger::after {
-    bottom: 0; }
+    bottom: 0;
+  }
   .header__menu.active {
-    top: 0; }
+    top: 0;
+  }
   .header__burger.active span {
-    transform: scale(0); }
+    transform: scale(0);
+  }
   .header__burger.active::before {
     transform: rotate(45deg);
-    top: 9px; }
+    top: 9px;
+  }
   .header__burger.active::after {
     transform: rotate(-45deg);
-    bottom: 9px; }
+    bottom: 9px;
+  }
   .header__link {
-    font-size: 26px; }
+    font-size: 26px;
+  }
+
   .content {
-    padding: 70px 0 0 0; } }
+    padding: 70px 0 0 0;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
