--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,74 +1,200 @@
-$bg: #0ea1c9;
-$card: #2c3a47;
+*, *::before, *::after{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  }
+a{
+  text-decoration: none;
+}
+li{
+  text-decoration: none;
+  list-style: none;
+}
 body{
-  background-color: $bg;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
+  height: 100%;
+  font-family: 'Montserrat', 'Arial',sans-serif;
+  font-weight: bold;
 }
-.box{
-  color: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 300px;
-  transform-style: preserve-3d;
-  perspective: 2000px;
-  &:hover{
-    transform: translate(-50%, -50%) rotateY(-20deg) skewY(3deg);
-    transition: .4s;
-  }
+.wrapper{}
+.container{
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
-  .box::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    border-top: 20px solid #ffffff;
-    border-left: 20px solid #ffffff;
-    box-sizing: border-box;
-  }
-  .box::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    border-bottom: 20px solid #ffffff;
-    border-right: 20px solid #ffffff;
-    box-sizing: border-box;
-  }
-.text{
-  background-color: $card;
-  position: absolute;
-  top: 30px;
-  left: -30px;
-  width: calc(100% + 60px);
-  height: calc(100% - 60px);
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
 
-  &__block{
-    line-height: 1.5;
-    padding: 21px 60px;
-    width: 100%;
-    box-sizing: border-box;
+}
+.header::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4a0263;
+  z-index: 2;
+}
+.header {
+  &__body {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
   }
-  &:hover {
-    transform: rotateY(20deg) skewY(-3deg);
-    transition: .4s;
+}
+.header {
+  &__logo {
+    flex: 0 0 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    z-index: 3;
   }
 }
 
-h3{
-  font-size: 30px;
-  margin-top: 0;
-  margin-bottom: 5px;
+.header {
+  &__logo img{
+   max-width: 100%;
+    display: block;
+  }
 }
-p{
-  font-size: 15px;
+
+.header__burger {
+  display: none;
+ }
+
+.header {
+  &__menu {
+  }
+}
+
+.header {
+  &__list {
+    display: flex;
+    position: relative;
+    z-index: 2;
+  }
+}
+
+.header {
+  &__item {
+    margin: 0 0 0 20px;
+  }
+}
+
+.header {
+  &__link {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    text-decoration: none;
+  }
+}
+
+.content{
+  padding: 100px 0 0 0;
+}
+
+.content {
+  &__text {
+    font-size: 18px;
+    line-height: 25px;
+    p{
+      margin: 0 0 20px 0;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  body.lock{
+    overflow: hidden;
+  }
+  .header {
+    &__body{
+      height: 50px;
+    }
+    &__logo{
+      flex: 0 0 40px;
+    }
+    &__burger {
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 20px;
+      position: relative;
+      z-index: 3;
+      span {
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+      }
+    }
+
+    &__menu{
+      position: fixed;
+      top: -100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color:#fe5e9a;
+      padding: 70px 10px 0 10px;
+      transition: all 0.3s ease 0s;
+    }
+    &__list{
+      display: block;
+    }
+    &__item{
+      margin: 0 0 20px 0;
+    }
+
+    &__burger::before,
+    &__burger::after {
+      content: '';
+      position: absolute;
+      background-color: #ffffff;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      transition: all 0.3s ease 0s;
+    }
+
+    &__burger::before {
+      top: 0;
+    }
+    &__burger::after {
+      bottom: 0;
+    }
+    &__menu.active {
+      top: 0;
+    }
+    &__burger.active span{
+      transform: scale(0);
+    }
+    &__burger.active::before{
+      transform: rotate(45deg);
+      top: 9px;
+    }
+    &__burger.active::after{
+      transform: rotate(-45deg);
+      bottom: 9px;
+    }
+    &__link{
+      font-size: 26px;
+    }
+  }
+  .content{
+    padding: 70px 0 0 0;
+  }
 }
